--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 
   <!-- Таблица Участников и Заслуг -->
    <div class="tab" id="inputtab">
+    <div id="myData"></div>
      <table border='0' id='mytable'>
        <tbody style="width:600;">
        <tr><td>Участник</td><td>Звёзды</td><td>Черепки</td></tr>
@@ -74,5 +75,6 @@
    </div>
    <div>
    </div>
+   <script src="Database.js"></script>
 </body>
 </html>
