--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
     <div id="myData"></div>
      <table border='0' id='mytable'>
        <tbody style="width:600;">
-       <tr><td>Участник</td><td>Звёзды</td><td>Черепки</td></tr>
+       <!-- <tr><td>Участник</td><td>Звёзды</td><td>Черепки</td></tr> -->
+       <tr><td>Участник</td><td>Достижения</td>
        </tbody>
        </table>
        <form action="" id="form">
