--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
      <table border='0' id='mytable'>
        <tbody style="width:600;">
        <!-- <tr><td>Участник</td><td>Звёзды</td><td>Черепки</td></tr> -->
-       <tr><td>Участник</td><td>Достижения</td>
+       <tr><td width=" 250">Участник</td><td>Достижения</td>
        </tbody>
        </table>
        <form action="" id="form">
