--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
       <script src="registr.js" defer></script></li> 
     </ul>
   </nav>
-  <div class="menu"><div class="footer">Copyringht * 2024<br>
-  powered by Новости
+  <div class="menu"><div class="footer">Легенда * 2024<br>
+  Активисты ДШО
   </div></div>
 
 
