--- a/Sporting.html
+++ b/Sporting.html
@@ -35,7 +35,8 @@
   <header>
     <div class="head">
       <p><img src="icon.png" alt="imag" style="height: 50px;width: 50px;" hspace="55" align="left"></p>
-      <div id="menu1"><p id="p" style="font-size:30px; color:#f7f7f7; position: relative; left: 500px;">Детска Школьная Организация</p></div>
+      <div id="menu1"><p class="p">Детска Школьная Организация</p></div>
+      <!-- <div id="menu1"><p id="p" style="font-size:30px; color:#f7f7f7; position: relative; left: 500px;">Детска Школьная Организация</p></div> -->
   </header>
   <nav id="menuVertical">
     <ul>
@@ -55,8 +56,8 @@
       <script src="register6.js" defer></script></li> 
     </ul>
   </nav>
-  <div class="menu"><div class="footer">Copyringht * 2024<br>
-  powered by Новости
+  <div class="menu"><div class="footer">Легенда * 2024<br>
+    Активисты ДШО
   </div></div>
 
 
