--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <ul>
       <li><a href="#1"><div class="img_n"><img src="icon.png"></div><span>Приветствие</span></a></li>
       <li><a href="index.html"><div class="img_n"><img src="icon.png"></div><span>Таблица</span></a></li>
-      <li><a href="#3"><div class="img_n"><img src="icon.png"></div><span>Сектора</span></a>
+      <li><a href="#3"><div class="img_n"><img src="ac.png"></div><span>Сектора</span></a>
         <ul>
           <li><a href="Media.html">Медиа</a></li>
           <li><a href="Leisure.html">Досуговый</a></li>
