--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
   </header>
   <nav id="menuVertical">
     <ul>
-      <li><a href="#1"><div class="img_n"><img src="icon.png"></div><span>Приветствие</span></a></li>
-      <li><a href="index.html"><div class="img_n"><img src="icon.png"></div><span>Таблица</span></a></li>
+      <li><a href="index.html"><div class="img_n"><img src="ac2.png"></div><span>Таблица</span></a></li>
       <li><a href="#3"><div class="img_n"><img src="ac.png"></div><span>Сектора</span></a>
         <ul>
           <li><a href="Media.html">Медиа</a></li>
@@ -52,7 +51,6 @@
           <li><a href="Educational and labor.html">Учебно-трудовой</a></li>
         </ul>
       </li>
-      <li><a href="#4"><div class="img_n"><img src="icon.png"></div><span>Вход Админа<input id="Password"><button id="submitpw" type="button">Войти</button></span></a>
       <script src="registr.js" defer></script></li> 
     </ul>
   </nav>
