--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </header>
   <nav id="menuVertical">
     <ul>
-      <li><a href="index.html"><div class="img_n"><img src="ac2.PNG"></div><span>Таблица</span></a></li>
+      <li><a href="index.html"><div class="img_n"><img src="ac2PNG.PNG"></div><span>Таблица</span></a></li>
       <li><a href="#3"><div class="img_n"><img src="ac.png"></div><span>Сектора</span></a>
         <ul>
           <li><a href="Media.html">Медиа</a></li>
