--- a/Volunteer.html
+++ b/Volunteer.html
@@ -31,33 +31,31 @@
   <!-- Если джава выключен, то появляется сообщение ниже -->
   <noscript>Включите javaScript!!!</noscript>
 
-  <!-- Меню сайта -->
+   <!-- Меню сайта -->
   <header>
     <div class="head">
       <p><img src="icon.png" alt="imag" style="height: 50px;width: 50px;" hspace="55" align="left"></p>
+      <!-- <div id="menu1"><p class="p" id="p" style="font-size:30px; color:#f7f7f7; position: relative; left: 500px;">Детска Школьная Организация</p></div> -->
       <div id="menu1"><p class="p">Детска Школьная Организация</p></div>
-      <!-- <div id="menu1"><p id="p" style="font-size:30px; color:#f7f7f7; position: relative; left: 500px;">Детска Школьная Организация</p></div> -->
   </header>
   <nav id="menuVertical">
     <ul>
-      <li><a href="#1"><div class="img_n"><img src="icon.png"></div><span>Приветствие</span></a></li>
-      <li><a href="index.html"><div class="img_n"><img src="icon.png"></div><span>Таблица</span></a></li>
-      <li><a href="#3"><div class="img_n"><img src="icon.png"></div><span>Сектора</span></a>
+      <li><a href="index.html"><div class="img_n"><img src="ac2.PNG.png"></div><span>Таблица</span></a></li>
+      <li><a href="#3"><div class="img_n"><img src="ac.png"></div><span>Сектора</span></a>
         <ul>
-            <li><a href="Media.html">Медиа</a></li>
-            <li><a href="Leisure.html">Досуговый</a></li>
-            <li><a href="Vozhatsky.html">Вожатский</a></li>
-            <li><a href="Volunteer.html">Волонтёрский</a></li>
-            <li><a href="Sporting.html">Спортивный</a></li>
-            <li><a href="Educational and labor.html">Учебно-трудовой</a></li>
-          </ul>
+          <li><a href="Media.html">Медиа</a></li>
+          <li><a href="Leisure.html">Досуговый</a></li>
+          <li><a href="Vozhatsky.html">Вожатский</a></li>
+          <li><a href="Volunteer.html">Волонтёрский</a></li>
+          <li><a href="Sporting.html">Спортивный</a></li>
+          <li><a href="Educational and labor.html">Учебно-трудовой</a></li>
+        </ul>
       </li>
-      <li><a href="#4"><div class="img_n"><img src="icon.png"></div><span>Вход Админа<input id="Password"><button id="submitpww" type="button">Войти</button></span></a>
-      <script src="register5.js" defer></script></li> 
+      <script src="registr.js" defer></script></li> 
     </ul>
   </nav>
   <div class="menu"><div class="footer">Легенда * 2024<br>
-    Активисты ДШО
+  Активисты ДШО
   </div></div>
 
 
