--- a/index.html
+++ b/index.html
@@ -1,12 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" />
-    <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
-  </head>
-  <body>
-    <py-script>
-      print("Hello World")
-    </py-script>
-  </body>
+<head>
+  <title>ДШО сайт</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="main.css"> 
+  <!-- <link href="/examples/vendors/bootstrap-3.3.7/css/bootstrap.min.css" rel="stylesheet"> -->
+
+
+  <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" />
+  <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
+
+
+
+  <!-- Скрипт для добавления новых элементов таблицы -->
+  <script type="text/javascript">
+    function addRow(content,morecontent)
+    {
+             if (!document.getElementsByTagName) return;
+             tabBody=document.getElementsByTagName("tbody").item(0);
+             row=document.createElement("tr");
+             cell1 = document.createElement("td");
+             cell2 = document.createElement("td");
+             textnode1=document.createTextNode(content);
+             textnode2=document.createTextNode(morecontent);
+             cell1.appendChild(textnode1);
+             cell2.appendChild(textnode2);
+             row.appendChild(cell1);
+             row.appendChild(cell2);
+             tabBody.appendChild(row);
+    }
+  </script>
+</head>
+<body>
+  <!-- Если джава выключен, то появляется сообщение ниже -->
+  <noscript>Включите javaScript!!!</noscript>
+
+  <!-- Меню сайта -->
+  <header>
+    <div class="head">
+      <p><img src="icon.png" alt="imag" style="height: 50px;width: 50px;" hspace="55" align="left"></p>
+      <!-- <div id="menu1"><p class="p" id="p" style="font-size:30px; color:#f7f7f7; position: relative; left: 500px;">Детска Школьная Организация</p></div> -->
+      <div id="menu1"><p class="p">Детска Школьная Организация</p></div>
+  </header>
+  <nav id="menuVertical">
+    <ul>
+      <li><a href="index.html"><div class="img_n"><img src="ac2.PNG.png"></div><span>Таблица</span></a></li>
+      <li><a href="#3"><div class="img_n"><img src="ac.png"></div><span>Сектора</span></a>
+        <ul>
+          <li><a href="Media.html">Медиа</a></li>
+          <li><a href="Leisure.html">Досуговый</a></li>
+          <li><a href="Vozhatsky.html">Вожатский</a></li>
+          <li><a href="Volunteer.html">Волонтёрский</a></li>
+          <li><a href="Sporting.html">Спортивный</a></li>
+          <li><a href="Educational and labor.html">Учебно-трудовой</a></li>
+          <li></li>
+        </ul>
+      <li><a href="#```"></div><input type="text" value="123" style="color: black;">123</a>
+      </li>
+      <script src="registr.js" defer></script></li> 
+    </ul>
+  </nav>
+  <div class="menu"><div class="footer">Легенда * 2024<br>
+  Активисты ДШО
+  </div></div>
+
+
+  <!-- Таблица Участников и Заслуг -->
+   <div class="tab" id="inputtab">
+    <div id="myData"></div>
+     <table border='0' id='mytable'>
+       <tbody style="width:600;">
+       <!-- <tr><td>Участник</td><td>Звёзды</td><td>Черепки</td></tr> -->
+       <tr><td width=" 250">Участник</td><td>Достижения</td>
+       </tbody>
+       </table>
+       <form action="" id="form">
+       <div id="playButton"></div>
+      </form>
+   </div>
+   <div>
+   </div>
+   <script src="Database.js"></script>
+   <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" />
+</body>
 </html>
